# MPRPC

./: 1  1.cpp  2024-12-4-log.txt  CMakeLists.txt  README.md  autobuild.sh
example/: user.proto
example/callee/: CMakeLists.txt  userservice.cpp
example/caller/: CMakeLists.txt  calluserservice.cpp
lib/include/: logger.h  mprpcapplication.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
src/include/: lockqueue.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
test/protobuf/: a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
